# ray_tracing_in_one_weekend

./: .gitignore  CMakeLists.txt
notes/latex/: gpt.sty  listingsstyles.sty  notes.tex
notes/latex/chapters/: references.bib  week0.tex
src/RayTracing/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cc  rtweekend.h  sphere.h  vec.h  vec3.h
